--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -23,15 +23,12 @@
 .Titulo{
 
     color: blue;
+    text-align: left;
     font-weight: bold;
-    text-align: :left;
-    border-bottom: 1px solid #ddd;
+border-bottom: 1px solid #ddd;
     
 }
 
-td{
-    border-bottom: 1px solid #00000000;
-}
     </style>
 </head>
 <body>
