--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -32,7 +32,7 @@ border-bottom: 1px solid #ddd;
 #titulo{
 
     text-align: right;
-    border-bottom: 1px solid #dddddd00;
+    border-bottom: 1px solid black;
 }
 
     </style>
