--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -25,9 +25,13 @@
     color: blue;
     text-align: right;
     font-weight: bold;
-    border-bottom: 1px solid black;
 
     
+}
+
+#titulo{
+    border-bottom: 1px solid black;
+
 }
 
 
@@ -36,7 +40,7 @@
 <body>
 
 <table >
-<tr class="Titulo"><td id="titulo"> <img src="Iconos/Icono1.svg" alt=""> Tienda</td> <td> <img src="Iconos/Icono2.svg" alt=""> Atencion al cliente</td> <td> <img src="Iconos/Icono4.svg" alt=""> Mi cuenta</td></tr>
+<tr class="Titulo"><td id="titulo"> <img src="Iconos/Icono1.svg" alt=""> Tienda</td> <td id="titulo"> <img src="Iconos/Icono2.svg" alt=""> Atencion al cliente</td> <td id="titulo"> <img src="Iconos/Icono4.svg" alt=""> Mi cuenta</td></tr>
 <tr><td>Celulares en promo</td> <td>Foro Movistar</td> <td>Acceder</td></tr>
 <tr><td>Equipos</td> <td>Saldos y recargas</td> <td rowspan="2">¿No sos usuario? <br> Registrate</td></tr>
 <tr><td>Planes</td> <td>Pagos y Facturacion</td> <!--  <td>12</td>--></tr>
