--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -72,7 +72,7 @@
         <tr>
             <td>Paquetes</td>
             <td>Tramites y consultas</td>
-            <td rowspan="2"><img src="Logos/Logo1.png" alt=""> </td>
+            <td rowspan="2"><img src="Logos/Logo1.png" alt="" width="100"> </td>
         </tr>
         <tr>
             <td>Creditos</td> <!--<td>23</td>--> <!--<td>24</td>-->
