--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -80,7 +80,7 @@
         <tr>
             <td>Roaming</td>
             <td> &nbsp</td>
-            <td rowspan="2">Logo App Store</td>
+            <td rowspan="2"><img src="Logos/Logo2.png" alt=""width="100"></td>
         </tr>
         <tr>
             <td>Promociones</td>
