--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -34,6 +34,11 @@
             border-bottom: 2px solid blue; 
         }
 
+        .Logos{
+
+            width: "100";
+        }
+
     </style>
 </head>
 
@@ -72,7 +77,7 @@
         <tr>
             <td>Paquetes</td>
             <td>Tramites y consultas</td>
-            <td rowspan="2"><img src="Logos/Logo1.png" alt="" width="100"> </td>
+            <td rowspan="2" class="Logos"><img src="Logos/Logo1.png" alt="" > </td>
         </tr>
         <tr>
             <td>Creditos</td> <!--<td>23</td>--> <!--<td>24</td>-->
@@ -80,7 +85,7 @@
         <tr>
             <td>Roaming</td>
             <td> &nbsp</td>
-            <td rowspan="2"><img src="Logos/Logo2.png" alt=""width="100"></td>
+            <td rowspan="2" class="Logos"><img src="Logos/Logo2.png" alt=""></td>
         </tr>
         <tr>
             <td>Promociones</td>
