--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -34,10 +34,6 @@
             border-bottom: 2px solid blue; 
         }
 
-        .Logos{
-
-            width: "50";
-        }
 
     </style>
 </head>
@@ -77,7 +73,7 @@
         <tr>
             <td>Paquetes</td>
             <td>Tramites y consultas</td>
-            <td rowspan="2" class="Logos"><img src="Logos/Logo1.png" alt="" > </td>
+            <td rowspan="2" class="Logos"><img src="Logos/Logo1.png" alt="" width="100" > </td>
         </tr>
         <tr>
             <td>Creditos</td> <!--<td>23</td>--> <!--<td>24</td>-->
@@ -85,7 +81,7 @@
         <tr>
             <td>Roaming</td>
             <td> &nbsp</td>
-            <td rowspan="2" class="Logos"><img src="Logos/Logo2.png" alt=""></td>
+            <td rowspan="2" class="Logos"><img src="Logos/Logo2.png" alt="" width="100"></td>
         </tr>
         <tr>
             <td>Promociones</td>
