--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -10,7 +10,9 @@
         table {
 
             background-color: rgb(202, 198, 198);
-            width: 250;
+            width: 400;
+
+            height: 250 ;
             font-size: 10px;
             font-family: Consolas;
             border-spacing: 0.5cm;
