--- a/Parte_B/Ejercicio6B.html
+++ b/Parte_B/Ejercicio6B.html
@@ -14,6 +14,7 @@
             font-size: 10px;
             font-family: Consolas;
             border-spacing: 0.5cm;
+            /* asi se separan las columnas*/
             margin: 0%;
 
         }
@@ -29,6 +30,7 @@
 
         #titulo {
             border-bottom: 2px solid blue;
+            /* asi se hace un borde inferior en una sola celda*/
         }
     </style>
 </head>
