--- a/Ejercicio7B.html
+++ b/Ejercicio7B.html
@@ -16,6 +16,7 @@
 .flex-container > div{
 
     border: 2px solid;
+    flex-direction: row;
 }
 
 
@@ -31,9 +32,7 @@
 <div>4</div>
 <div>5</div>
 
-
-
-    </div>
+</div>
     
 </body>
 </html>
