--- a/Ejercicio7B.html
+++ b/Ejercicio7B.html
@@ -9,15 +9,19 @@
     <style>
 
 .flex-container {
-  display: inline-flex;
-  background-color: white;
+  display: flex;
+  flex-direction: column;
+  background-color: DodgerBlue;
 }
 
-.flex-container > div{
+.flex-container > div {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
 
-    border: 2px solid;
-    flex-direction: row;
-}
 
 
 
