--- a/Ejercicio7B.html
+++ b/Ejercicio7B.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejercicio 7 B</title>
+
+    <style>
 .flex-container {
   display: flex;
   flex-direction: column;
@@ -16,16 +21,23 @@
   line-height: 75px;
   font-size: 30px;
 }
-</style>
+
+
+
+
+
+    </style>
 </head>
 <body>
 
-<h1>The flex-direction Property</h1>
+    <div class="flex-container">
 
-<p>The "flex-direction: column;" stacks the flex items vertically (from top to bottom):</p>
-
-<div class="flex-container">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+    </div>
+    
+</body>
+</html>
