--- a/Ejercicio7B.html
+++ b/Ejercicio7B.html
@@ -13,7 +13,7 @@
   background-color: DodgerBlue;
 }
 
-.flex-container > div {
+.flex-container.flex-container.div {
   background-color: #f1f1f1;
   width: 100px;
   margin: 10px;
