--- a/Ejercicio7B.html
+++ b/Ejercicio7B.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 7 B</title>
-
-    <style>
+<style>
 .flex-container {
   display: flex;
   flex-direction: column;
   background-color: DodgerBlue;
 }
 
-.flex-container.div {
+.flex-container > div {
   background-color: #f1f1f1;
   width: 100px;
   margin: 10px;
@@ -21,23 +16,21 @@
   line-height: 75px;
   font-size: 30px;
 }
-
-
-
-
-
-    </style>
+</style>
 </head>
 <body>
 
-    <div class="flex-container">
+<h1>The flex-direction Property</h1>
 
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-    </div>
-    
+<p>The "flex-direction: column;" stacks the flex items vertically (from top to bottom):</p>
+
+<div class="flex-container">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+</div>
+
 </body>
 </html>
+
+
