--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Ejercicio 7 B</title>
-
-    <style>
-
+<style>
 .flex-container {
   display: flex;
-  border: 3px;
-
+  flex-direction: column;
+  background-color: DodgerBlue;
 }
 
-
-
-    </style>
+.flex-container > div {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+}
+</style>
 </head>
 <body>
 
-    <div class="flex-container">
-<div>1</div>
-<div>2</div>
-<div>3</div>
-<div>4</div>
-<div>5</div>
+<h1>The flex-direction Property</h1>
 
+<p>The "flex-direction: column;" stacks the flex items vertically (from top to bottom):</p>
 
+<div class="flex-container">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+</div>
 
-    </div>
-    
 </body>
 </html>
+
+
