--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -4,7 +4,7 @@
 <style>
 .flex-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   background-color: DodgerBlue;
 }
 
