--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -4,8 +4,8 @@
 <style>
 .flex-container {
   display: flex;
-  flex-direction: row;
-  background-color: DodgerBlue;
+  flex-direction: column;
+
 }
 
 .flex-container > div {
@@ -20,9 +20,6 @@
 </head>
 <body>
 
-<h1>The flex-direction Property</h1>
-
-<p>The "flex-direction: column;" stacks the flex items vertically (from top to bottom):</p>
 
 <div class="flex-container">
   <div>1</div>
