--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -22,10 +22,14 @@
 
 
 <div class="flex-container">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-</div>
+  <div>1
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+
+  </div>
+
 
 </body>
 </html>
