--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -16,6 +16,11 @@
   line-height: 75px;
   font-size: 30px;
 }
+
+.flex-container.Fila{
+
+  flex-direction: row;
+}
 </style>
 </head>
 <body>
@@ -24,6 +29,10 @@
 <div class="flex-container">
   <div>
     <div>Foto</div>
+    <div class="Fila">1</div>
+    <div class="Fila">2</div>
+    <div class="Fila">3</div>
+    <div class="Fila">4</div>
 
 
   </div>
