--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -4,11 +4,9 @@
 <style>
 .flex-container {
   display: flex;
-
-
 }
 
-.flex-container > div {
+.flex-container {
   background-color: #f1f1f1;
   width: 100px;
   margin: 10px;
@@ -18,7 +16,7 @@
   flex-direction: column;
 }
 
-.flex-container.Fila {
+.flex-container > Fila {
 
   flex-direction: row;
 }
