--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -27,11 +27,13 @@
 
 <div class="flex-container">
   <div>
-    <div>Foto</div>
-    <div class="Fila">1</div>
-    <div class="Fila">2</div>
-    <div class="Fila">3</div>
-    <div class="Fila">4</div>
+    <div>Foto
+      <div class="Fila">1</div>
+      <div class="Fila">2</div>
+      <div class="Fila">3</div>
+      <div class="Fila">4</div>
+    </div>
+
 
 
   </div>
