--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,38 @@
     <title>Document</title>
 
     <style>
-#Foto1 {
-    display: flex;
-    flex-direction: column;
-}
+        /* estilo del contenedor*/
+        .contenedor {
+            width: 500px;
+            height: 200px;
+            background: #fff;
+            padding: 10px;
+            border: 10px solid black;
+            margin: 20px;
 
+        }
 
+        /* estilo del elemento*/
+        .elemento {
+            color: #fff;
+            margin: 5px;
+            width: 50px;
+            background: #E67E22;
+            text-align: center;
+        }
     </style>
 </head>
+
 <body>
+    <div class="contenedor">
 
-    <div id="Foto1"> foto 1</div>
-    
+        <div class="elemento elemento1"> foto 1</div>
+        <div class="elemento elemento2"> texto 1</div>
+        <div class="elemento elemento3"> texto 2</div>
+        <div class="elemento elemento4"> texto 3</div>
+        <div class="elemento elemento5"> texto 4</div>
+
+    </div>
 </body>
-</html>
 
+</html>
