--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -8,24 +8,29 @@
     <title>Document</title>
 
     <style>
-        /* estilo del contenedor*/
         .contenedor {
+            /* estilo del contenedor*/
             width: 500px;
             height: 200px;
             background: #fff;
             padding: 10px;
             border: 10px solid black;
             margin: 20px;
+            /*--------------------------------------------------*/
 
+            display: flex;
         }
 
-        /* estilo del elemento*/
+
         .elemento {
+            /* estilo del elemento*/
             color: #fff;
             margin: 5px;
             width: 50px;
             background: #E67E22;
             text-align: center;
+            /*--------------------------------------------------*/
+
         }
     </style>
 </head>
