--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -32,6 +32,11 @@
             /*--------------------------------------------------*/
 
         }
+
+      .elemento elemento2{
+height: 50px;
+    
+      }
     </style>
 </head>
 
