--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -19,6 +19,7 @@
             /*--------------------------------------------------*/
 
             display: flex;
+            flex-direction: column; /* las pone una DEBAJO DE LA OTRA!*/
         }
 
 
