--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -20,6 +20,7 @@
 
             display: flex;
             flex-direction: column; /* las pone una DEBAJO DE LA OTRA!*/
+            flex-wrap:calc(500/5);
         }
 
 
