--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -20,7 +20,7 @@
 
             display: flex;
             flex-direction: column; /* las pone una DEBAJO DE LA OTRA!*/
-            flex-wrap:calc(500/5);
+            flex-wrap:wrap;
         }
 
 
@@ -28,7 +28,7 @@
             /* estilo del elemento*/
             color: #fff;
             margin: 5px;
-            width: 50px;
+            width: 100px;
             height: 50px;
             background: #E67E22;
             text-align: center;
