--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -41,7 +41,7 @@
 <body>
     <div class="contenedor">
 
-        <div class="elemento elemento1"> foto 1</div>
+        <div class="elemento elemento1" whidth: 100 px> foto 1</div>
         <div class="elemento elemento2"> texto 1</div>
         <div class="elemento elemento3"> texto 2</div>
         <div class="elemento elemento4"> texto 3</div>
