--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -21,6 +21,7 @@
             display: flex;
             flex-direction: column; /* las pone una DEBAJO DE LA OTRA!*/
             /*flex-wrap:wrap*/
+            justify-content: flex-end;
         }
 
 
@@ -41,7 +42,7 @@
 <body>
     <div class="contenedor">
 
-        <div class="elemento elemento1" whidth: 100 px> foto 1</div>
+        <div class="elemento elemento1"> foto 1</div>
         <div class="elemento elemento2"> texto 1</div>
         <div class="elemento elemento3"> texto 2</div>
         <div class="elemento elemento4"> texto 3</div>
