--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -21,7 +21,7 @@
             display: flex;
             flex-direction: column; /* las pone una DEBAJO DE LA OTRA!*/
             /*flex-wrap:wrap*/
-            justify-content: flex-end;
+            justify-content:center;
         }
 
 
