--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -32,7 +32,7 @@
             width: 50px;
             height: 50px;
             background: #E67E22;
-       
+            text-align: center;
             /*--------------------------------------------------*/
 
         }
