--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -19,9 +19,9 @@
             /*--------------------------------------------------*/
 
             display: flex;
-            flex-direction: column; /* las pone una DEBAJO DE LA OTRA!*/
-    
-            justify-content:space-around;
+            flex-direction: column;
+            /* las pone una DEBAJO DE LA OTRA!*/
+            justify-content: space-around;
         }
 
 
