--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -19,9 +19,8 @@
             /*--------------------------------------------------*/
 
             display: flex;
-            flex-direction: column;
-            /* las pone una DEBAJO DE LA OTRA!*/
-            justify-content: space-around;
+            flex-direction: column;  /* las pone una DEBAJO DE LA OTRA!*/
+            justify-content:flex-end;
         }
 
 
