--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -19,7 +19,7 @@
             /*--------------------------------------------------*/
 
             display: flex;
-            flex-direction: row;  /* las pone una DEBAJO DE LA OTRA!*/
+            flex-direction: column;  /* las pone una DEBAJO DE LA OTRA!*/
             justify-content:flex-end;
         }
 
