--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -19,9 +19,9 @@
             /*--------------------------------------------------*/
 
             display: flex;
-            flex-direction: column;  /* las pone una DEBAJO DE LA OTRA!*/
+            flex-direction: column;  /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
             justify-content:flex-end; /* para menu espacio alrededor o entre */
-            align-items:flex-end;
+            align-items:flex-end; 
         }
 
 
@@ -35,6 +35,10 @@
             text-align: center;
             /*--------------------------------------------------*/
 
+        }
+
+        .elemento1{
+            align-items: stretch;
         }
     </style>
 </head>
