--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -20,7 +20,7 @@
 
             display: flex;
             flex-direction: column;  /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
-            justify-content:flex-end; /* para menu espacio alrededor o entre */
+            justify-content:flex-start; /* para menu espacio alrededor o entre */
             align-items:flex-end; 
         }
 
