--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -21,7 +21,7 @@
             display: flex;
             flex-direction: row;  /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
             justify-content:flex-start; /* para menu espacio alrededor o entre */
-            align-items:flex-end; 
+            align-items:flex-start; 
         }
 
 
