--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -10,7 +10,7 @@
     <style>
         .contenedor {
             /* estilo del contenedor*/
-            width: 500px;
+           /* width: 500px;*/
             height: 200px;
             background: #fff;
             padding: 10px;
@@ -38,7 +38,7 @@
         }
 
         .elemento > elemento1{
-            align-items: stretch;
+            align-items: stretch; /* estira el elemento para abajo*/
         }
     </style>
 </head>
