--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -11,7 +11,7 @@
         .contenedor {
             /* estilo del contenedor*/
            /* width: 500px;*/
-            height: 200px;
+           /* height: 200px;*/
             background: #fff;
             padding: 10px;
             border: 10px solid black;
