--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -29,8 +29,8 @@
             /* estilo del elemento*/
             color: #fff;
             margin: 5px;
-            width: 50px;
-            height: 50px;
+            /*width: 50px;*/
+            /*height: 50px;*/
             background: #E67E22;
             text-align: center;
             /*--------------------------------------------------*/
