--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -10,8 +10,8 @@
     <style>
         .contenedor {
             /* estilo del contenedor*/
-           /* width: 500px;*/
-           /* height: 200px;*/
+            width: 500px;
+            height: 200px;
             background: #fff;
             padding: 10px;
             border: 10px solid black;
@@ -19,9 +19,9 @@
             /*--------------------------------------------------*/
 
             display: flex;
-            flex-direction: row;  /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
-            justify-content:flex-start; /* para menu espacio alrededor o entre */
-            align-items:flex-start; 
+            flex-direction: row; /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
+            justify-content: flex-start;/* para menu espacio alrededor o entre */
+            align-items: flex-start;
         }
 
 
@@ -29,16 +29,17 @@
             /* estilo del elemento*/
             color: #fff;
             margin: 5px;
-            /*width: 50px;*/
-            /*height: 50px;*/
+            width: 50px;
+            height: 50px;
             background: #E67E22;
             text-align: center;
             /*--------------------------------------------------*/
 
         }
 
-        .elemento > elemento1{
-            align-items: stretch; /* estira el elemento para abajo*/
+        .elemento>elemento1 {
+            align-items: stretch;
+            /* estira el elemento para abajo*/
         }
     </style>
 </head>
@@ -46,7 +47,7 @@
 <body>
     <div class="contenedor">
 
-        <div class="elemento elemento1"> foto 1</div>
+        <div class="elemento elemento1" align-items: stretch> foto 1</div>
         <div class="elemento elemento2"> texto 1</div>
         <div class="elemento elemento3"> texto 2</div>
         <div class="elemento elemento4"> texto 3</div>
