--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -22,6 +22,7 @@
             flex-direction: row; /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
             justify-content: flex-start;/* para menu espacio alrededor o entre */
             align-items: flex-start;
+            align-items: stretch ;
         }
 
 
@@ -30,7 +31,7 @@
             color: #fff;
             margin: 5px;
             width: 50px;
-            height: 50px;
+        /*    height: 50px;*/
             background: #E67E22;
             text-align: center;
             /*--------------------------------------------------*/
