--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -17,12 +17,12 @@
             border: 10px solid black;
             margin: 20px;
             /*--------------------------------------------------*/
-
+flex-wrap: wrap;
             display: flex;
             flex-direction: row; /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
             justify-content: flex-start;/* para menu espacio alrededor o entre */
             align-items: flex-start;
-            align-items: stretch ;
+            align-items: stretch ; /* height del elemento tiene que estar seteado* Toma todo el atlo del contenedor/
         }
 
 
@@ -31,7 +31,7 @@
             color: #fff;
             margin: 5px;
             width: 50px;
-        /*    height: 50px;*/
+            /*height: 50px;*/ /* seteados para align-items: stretch  */
             background: #E67E22;
             text-align: center;
             /*--------------------------------------------------*/
