--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -17,7 +17,8 @@
             border: 10px solid black;
             margin: 20px;
             /*--------------------------------------------------*/
-flex-wrap: wrap;
+            
+           /*flex-wrap: wrap;*/
             display: flex;
             flex-direction: row; /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
             justify-content: flex-start;/* para menu espacio alrededor o entre */
