--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -19,7 +19,7 @@
             /*--------------------------------------------------*/
 
             display: flex;
-            flex-direction: row; /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
+            flex-direction: column; /* row /// IMPORTANTE!!! las pone una DEBAJO DE LA OTRA!*/
             justify-content: flex-start;/* para menu espacio alrededor o entre */
             align-items: flex-start;
             /*align-items: stretch ; /* height del elemento tiene que estar seteado* Toma todo el atlo del contenedor/
