--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -11,7 +11,7 @@
 .contenedor{
     display: grid;
     border: 2px solid black;
-    grid-template-columns: 20px ;
+    grid-template-columns: 20px 50px ;
 
 }
 
