--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -11,7 +11,8 @@
 .contenedor{
     display: grid;
     border: 2px solid black;
-    grid-template-columns: 20px 80px ;
+    grid-template-columns: 20px ;
+    grid-template-rows: 20px;
 
 }
 
