--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -5,17 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 7B</title>
+    <title>Ejercicio 7B_ GRID</title>
 
     <style>
 .contenedor{
+    max-width:500px ;
+    margin: 20px;
+    outline: 3px solid white ; /* borde del contenedor*/
+    background-color: white;
     display: grid;
-    border: 2px solid black;
-    grid-template-columns: 20px ;
-    grid-template-rows: 20px;
-
+    grid-template-columns: 10% 90% ; /* recomendable comenzar con columnas*/
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  
+  
 }
 
+.parte{
+ background-color: white;
+ border: 1px solid black;
+ font-size:x-small;
+
+}
+ 
+.parte-1{
+     
+    grid-row: 1/5;
+    /* FOTO:  AGRUPAR FILAS:  comienza en la linea 1 y termina en la 5  -------*/
+}
 
     </style>
 
@@ -26,12 +42,13 @@
 
  <!-- (div.parte)*5-->
 
-<div class="parte">1</div>
-<div class="parte">2</div>
-<div class="parte">3</div>
-<div class="parte">4</div>
-<div class="parte">5</div>
+<div class="parte parte-1"><img src="3img/Img1.png" alt=""></div>
+<div class="parte parte-2"> <strong>cinthia t</strong> &nbsp; Hace 3 meses </div>
+<div class="parte"> solo quiero decirte que TE AMOOOOOOOOOOOOOOOOOOOOOOOO!!</div>
+<div class="parte"> RESPONDER &nbsp; 4 &nbsp; <img src="3img/pulgar_arriba.png" alt=""> &nbsp; <img src="3img/pulgar_abajo.png" alt=""> &nbsp; <img src="3img/corazon.png" alt=""></div>
+<div class="parte"> <strong> Ver las 2 respuestas &nbsp; v</strong>  </div>
 
+<!-- alt 118 v-->
 
 
 </div>
