--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -7,51 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 7B_ GRID</title>
 
-    <style>
-.contenedor{
-    max-width:500px ;
-    margin: 20px;
-    outline: 3px solid white ; /* borde del contenedor*/
-    background-color: white;
-    display: grid;
-    grid-template-columns: 10% 90% ; /* recomendable comenzar con columnas*/
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  
-  
-}
-
-.parte{
- background-color: white;
- border: 1px solid black;
- font-size:x-small;
-
-}
- 
-.parte-1{
-     
-    grid-row: 1/5;
-    /* FOTO:  AGRUPAR FILAS:  comienza en la linea 1 y termina en la 5  -------*/
-}
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="Ejercicio7B.css">
 
 </head>
 
 <body>
-<div class="contenedor">
+    <div class="contenedor">
 
- <!-- (div.parte)*5-->
+        <!-- (div.parte)*5-->
 
-<div class="parte parte-1"><img src="3img/Img1.png" alt=""></div>
-<div class="parte parte-2"> <strong>cinthia t</strong> &nbsp; Hace 3 meses </div>
-<div class="parte"> solo quiero decirte que TE AMOOOOOOOOOOOOOOOOOOOOOOOO!!</div>
-<div class="parte"> RESPONDER &nbsp; 4 &nbsp; <img src="3img/pulgar_arriba.png" alt=""> &nbsp; <img src="3img/pulgar_abajo.png" alt=""> &nbsp; <img src="3img/corazon.png" alt=""></div>
-<div class="parte"> <strong> Ver las 2 respuestas &nbsp; v</strong>  </div>
+        <div class="parte parte-1"><img src="3img/Img1.png" alt=""></div>
+        <div class="parte parte-2"> <strong>cinthia t</strong> &nbsp; Hace 3 meses </div>
+        <div class="parte parte-3"> solo quiero decirte que TE AMOOOOOOOOOOOOOOOOOOOOOOOO!!</div>
+        <div class="parte parte-4"> RESPONDER &nbsp; 4 &nbsp; <img class="pulgar_arriba" src="3img/pulgar_arriba.png" alt=""> &nbsp; <img
+                src="3img/pulgar_abajo.png" alt=""> &nbsp; <img src="3img/corazon.png" alt=""></div>
+        <div class="parte parte-5"> <strong> Ver las 2 respuestas &nbsp; v</strong> </div>
 
-<!-- alt 118 v-->
+        <!-- alt 118 v-->
 
 
-</div>
+    </div>
 </body>
 
 </html>
