--- a/Ejercicios Adicionales/Ejercicio_Adicional_1.html
+++ b/Ejercicios Adicionales/Ejercicio_Adicional_1.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio Adicional 1</title>
+
+    <style>
+        .contenedor {
+
+            display: flex;
+            flex-direction: row;
+
+
+        }
+
+
+        .elemento-1 {
+
+            border: 8px groove fuchsia;
+            font-family: Arial Black, Helvetica, sans-serif;
+        }
+
+        .elemento-2{
+            background-color: aqua;
+        }
+    </style>
 </head>
+
 <body>
 
     <p>1.- Cree una lista HTML y asigne distintas propiedades a los atributos de su caja para
         resaltar cada uno de ellos</p>
 
-        <div class="contenedor">
-<ul>
-<li> Sopa de Caracol</li>
-<li> Milenesa napolitana</li>
-<li> Pizza de peperoni</li>
-<li> Helado de dulde de lecha</li>
+    <div class="contenedor">
+        <ul>
+            <li class=" elemento elemento-1"> Sopa de Caracol</li>
+            <li class="elemento elemento-2"> Milanesa napolitana</li>
+            <li clas="elemento elemento-3"> Pizza de peperoni</li>
+            <li class="elemento elemento-4"> Helado de dulce de leche</li>
 
 
-</ul>
+        </ul>
 
 
-        </div>
-    
+    </div>
+
 </body>
+
 </html>
