--- a/Parte_B/Ejercicio7B.html
+++ b/Parte_B/Ejercicio7B.html
@@ -17,7 +17,7 @@
         <!-- (div.parte)*5-->
 
         <div class="parte parte-1"><img src="3img/Img1.png" alt=""></div>
-        <div class="parte parte-2"> <strong>cinthia t</strong> &nbsp; Hace 3 meses </div>
+        <div class="parte parte-2"> <strong>cinthia t</strong> &nbsp; <span>Hace 3 meses </span> </div>
         <div class="parte parte-3"> solo quiero decirte que TE AMOOOOOOOOOOOOOOOOOOOOOOOO!!</div>
         <div class="parte parte-4"> RESPONDER &nbsp; 4 &nbsp; <img class="pulgar_arriba" src="3img/pulgar_arriba.png" alt=""> &nbsp; <img
                 src="3img/pulgar_abajo.png" alt=""> &nbsp; <img src="3img/corazon.png" alt=""></div>
